changed header and add image

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -6,13 +6,16 @@
   </head>
   <body>
     <center>
-      <h1>Whatchu Tryna Eat?</h1>
+      <h1>Whatchu Wanna Eat?</h1>
 
       <form action="/search" method="get">
         <input type="submit" value="Search">
         <input id="searchInput" type="text" name="search" placeholder="Type Search"/>
         <input type="text" name="location" value="Murrysville">
       </form>
+
+      <br>
+      <img src="https://i.ytimg.com/vi/Un-iZkXH13Y/maxresdefault.jpg" alt="Whatchu Wanna Eat?">
     </center>
   </body>
 </html>
