--- a/views/search.ejs
+++ b/views/search.ejs
@@ -6,7 +6,7 @@
   </head>
   <body onload="setOptions(<%= JSON.stringify(data) %>)">
     <center>
-      <h1>Whatchu Tryna Eat?</h1>
+      <h1>Whatchu Wanna Eat?</h1>
 
       <form action="/search" method="get">
         <input type="submit" value="Search">
