--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,21 +1,14 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>WannaEat</title>
-  </head>
-  <body>
-    <center>
+<% include partials/header %>
+
+    <div class="landing align-middle">
       <h1>Whatchu Wanna Eat?</h1>
+      <div class="formContainer">
+        <form action="/search" method="get" class="form-inline">
+          <input class="form-control mb-2 mr-sm-2 mb-sm-0" type="text" name="search" placeholder="Enter Search..."/>
+          <input class="form-control mb-2 mr-sm-2 mb-sm-0" type="text" name="location" value="Murrysville" placeholder="Enter Location...">
+          <input class="btn btn-primary" type="submit" value="Search">
+        </form>
+      </div>
+    </div>
 
-      <form action="/search" method="get">
-        <input type="submit" value="Search">
-        <input id="searchInput" type="text" name="search" placeholder="Type Search"/>
-        <input type="text" name="location" value="Murrysville">
-      </form>
-
-      <br>
-      <img src="https://i.ytimg.com/vi/Un-iZkXH13Y/maxresdefault.jpg" alt="Whatchu Wanna Eat?">
-    </center>
-  </body>
-</html>
+<% include partials/footer %>
