Loading dots for search page

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -7,9 +7,9 @@
           <input class="form-control mb-2 mr-sm-2 mb-sm-0" type="text" name="search" placeholder="Enter Search..."/>
 
           <div class="input-group mb-2 mr-sm-2 mb-sm-0">
-            <input id="location" class="form-control" type="text" name="location" value="Murrysville" placeholder="Enter Location...">
+            <input id="location" class="form-control" type="text" name="location" placeholder="Enter Location...">
             <div class="input-group-append">
-              <button class="btn btn-outline-secondary" type="button" onclick="setLocation()">
+              <button class="btn btn-outline-secondary" title="Set Current Location" type="button" onclick="setLocation()">
                 <i class="fas fa-map-marker-alt"></i>
               </button>
             </div>
