--- a/views/search.ejs
+++ b/views/search.ejs
@@ -30,7 +30,7 @@
       </div>
 
 
-      Let's go to <a target="_blank" rel="noopener noreferrer" id="output">...</a>
+      Let's go to <a target="_blank" rel="noopener noreferrer" id="output" class="saving"><span>.</span><span>.</span><span>.</span></a>
 
       <div class="spinner">
         <canvas id="canvas" width="500" height="500"></canvas>
