--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -15,7 +15,7 @@
             </div>
           </div>
 
-          <input class="btn btn-primary" type="submit" value="Search">
+          <input id="searchBtn" class="btn btn-primary" type="submit" value="Search">
         </form>
       </div>
     </div>
